--- a/index.html
+++ b/index.html
@@ -2,21 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Camera Switch & Combine Photos</title>
+  <title>Photo Combiner</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    * {
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    body {
+      background: #f0f2f5;
+      margin: 0;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      color: #333;
+    }
+
     video, canvas {
-      border: 2px solid #000;
-      margin: 10px;
+      border-radius: 12px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      max-width: 90%;
+      height: auto;
+      margin-bottom: 20px;
+    }
+
+    .controls {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+
+    button {
+      background-color: #0066ff;
+      color: white;
+      padding: 12px 18px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background-color: #004ccc;
+    }
+
+    button:disabled {
+      background-color: #aaa;
+      cursor: not-allowed;
+    }
+
+    #preview {
+      margin-top: 10px;
+      max-width: 90%;
+    }
+
+    @media (max-width: 500px) {
+      button {
+        font-size: 14px;
+        padding: 10px 14px;
+      }
     }
   </style>
 </head>
 <body>
-  <h2>📷 Take Two Photos & Merge</h2>
+  <h2>📸 Click Two Photos & Combine Them</h2>
 
-  <video id="video" width="320" height="240" autoplay playsinline></video><br>
-  <button onclick="capturePhoto()">📸 Take Photo</button>
-  <button onclick="switchCamera()">🔄 Switch Camera</button>
-  <button onclick="downloadCombined()" style="display:none;" id="downloadBtn">⬇️ Download Combined</button><br>
+  <video id="video" width="320" height="240" autoplay playsinline></video>
+
+  <div class="controls">
+    <button onclick="capturePhoto()">📷 Take Photo</button>
+    <button onclick="switchCamera()">🔄 Switch Camera</button>
+    <button onclick="downloadCombined()" style="display:none;" id="downloadBtn">⬇️ Download Combined</button>
+  </div>
 
   <canvas id="preview" style="display:none;"></canvas>
 
@@ -91,7 +158,7 @@
       link.click();
     }
 
-    startCamera(); // start with front camera
+    startCamera();
   </script>
 </body>
 </html>
