--- a/index.html
+++ b/index.html
@@ -2,68 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Photo Combiner with Optional BG Removal</title>
+  <title>Photo Combiner with BG Remover API, Crop & Preview</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CropperJS CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/cropperjs@1.5.13/dist/cropper.min.css" rel="stylesheet"/>
   <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Segoe UI', sans-serif;
-    }
-
-    body {
-      background: #f0f2f5;
-      margin: 0;
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #333;
-    }
-
-    video, canvas {
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      max-width: 90%;
-      height: auto;
-      margin-bottom: 20px;
-    }
-
-    .controls {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      justify-content: center;
-      margin-bottom: 20px;
-    }
-
-    button {
-      background-color: #0066ff;
-      color: white;
-      padding: 12px 18px;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background-color: #004ccc;
-    }
-
-    .toggle-btn.active {
-      background-color: #28a745 !important;
-    }
-
-    #preview {
-      margin-top: 10px;
-      max-width: 90%;
-    }
+    * { box-sizing: border-box; font-family: 'Segoe UI', sans-serif; }
+    body { background: #f0f2f5; margin: 0; padding: 20px; display: flex; flex-direction: column; align-items: center; }
+    h2 { text-align: center; margin-bottom: 20px; color: #333; }
+    video, canvas { border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); max-width: 90%; height: auto; margin-bottom: 20px; }
+    .controls { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-bottom: 20px; }
+    button { background-color: #0066ff; color: white; padding: 12px 18px; font-size: 16px; border: none; border-radius: 8px; cursor: pointer; transition: background 0.3s; }
+    button:hover { background-color: #004ccc; }
+    .toggle-btn.active { background-color: #28a745 !important; }
+    #photoPreviews { display: flex; gap: 20px; margin-bottom: 20px; }
+    .preview-container { position: relative; display: inline-block; }
+    .delete-btn { position: absolute; top: 4px; right: 4px; background: #ff4444; color: #fff; border: none; border-radius: 50%; width: 24px; height: 24px; font-size: 16px; cursor: pointer; }
+    .crop-btn { position: absolute; bottom: 4px; left: 4px; background: #28a745; color: #fff; border: none; border-radius: 5px; font-size: 12px; padding: 2px 8px; cursor: pointer; }
+    #cropModal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100vw; height: 100vh; background: rgba(0,0,0,0.7); justify-content: center; align-items: center; }
+    #cropModalContent { background: #fff; padding: 20px; border-radius: 12px; }
+    #cropperImage { max-width: 80vw; max-height: 60vh; }
+    #preview { margin-top: 10px; max-width: 90%; }
   </style>
 </head>
 <body>
@@ -78,11 +37,22 @@
     <button onclick="downloadCombined()" style="display:none;" id="downloadBtn">⬇️ Download Combined</button>
   </div>
 
+  <div id="photoPreviews"></div>
   <canvas id="preview" style="display:none;"></canvas>
 
-  <!-- TensorFlow + BodyPix -->
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix"></script>
+  <!-- Crop Modal -->
+  <div id="cropModal">
+    <div id="cropModalContent">
+      <img id="cropperImage" src="" alt="To Crop">
+      <div style="margin-top:10px; text-align:right;">
+        <button onclick="applyCrop()">Apply Crop</button>
+        <button onclick="closeCropper()">Cancel</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- CropperJS JS -->
+  <script src="https://cdn.jsdelivr.net/npm/cropperjs@1.5.13/dist/cropper.min.js"></script>
 
   <script>
     let video = document.getElementById('video');
@@ -91,18 +61,13 @@
     let images = [];
     let useFrontCamera = true;
     let stream;
-    let net;
     let removeBg = false;
+    let croppingIndex = null;
+    let cropper = null;
 
     async function startCamera() {
       if (stream) stream.getTracks().forEach(track => track.stop());
-
-      const constraints = {
-        video: {
-          facingMode: useFrontCamera ? "user" : "environment"
-        }
-      };
-
+      const constraints = { video: { facingMode: useFrontCamera ? "user" : "environment" } };
       try {
         stream = await navigator.mediaDevices.getUserMedia(constraints);
         video.srcObject = stream;
@@ -125,55 +90,128 @@
     }
 
     async function capturePhoto() {
+      // Draw current frame to temp canvas
       const tempCanvas = document.createElement('canvas');
       tempCanvas.width = video.videoWidth;
       tempCanvas.height = video.videoHeight;
       const tempCtx = tempCanvas.getContext('2d');
       tempCtx.drawImage(video, 0, 0);
 
-      if (removeBg) {
-        const imageData = tempCtx.getImageData(0, 0, tempCanvas.width, tempCanvas.height);
-        const segmentation = await net.segmentPerson(imageData, {
-          internalResolution: 'medium',
-          segmentationThreshold: 0.7
-        });
-
-        const fgCanvas = document.createElement('canvas');
-        fgCanvas.width = tempCanvas.width;
-        fgCanvas.height = tempCanvas.height;
-        const fgCtx = fgCanvas.getContext('2d');
-        const fgImage = fgCtx.createImageData(fgCanvas.width, fgCanvas.height);
-
-        for (let i = 0; i < segmentation.data.length; i++) {
-          const offset = i * 4;
-          if (segmentation.data[i] === 1) {
-            fgImage.data[offset] = imageData.data[offset];
-            fgImage.data[offset + 1] = imageData.data[offset + 1];
-            fgImage.data[offset + 2] = imageData.data[offset + 2];
-            fgImage.data[offset + 3] = 255;
-          } else {
-            fgImage.data[offset + 3] = 0;
-          }
+      // Convert to blob
+      tempCanvas.toBlob(async (blob) => {
+        let imgSrc;
+        if (removeBg) {
+          // Call BG remover API
+          imgSrc = await removeBackgroundFromImage(blob);
+        } else {
+          imgSrc = await blobToDataURL(blob);
         }
+        // Add to images array and update previews
+        images.push({ src: imgSrc, width: tempCanvas.width, height: tempCanvas.height });
+        updatePreviews();
+        if (images.length === 2) mergePhotos();
+      }, 'image/png');
+    }
 
-        fgCtx.putImageData(fgImage, 0, 0);
-        const img = new Image();
-        img.src = fgCanvas.toDataURL('image/png');
-        img.onload = () => {
-          images.push(img);
-          if (images.length === 2) mergePhotos();
-        };
-      } else {
-        const img = new Image();
-        img.src = tempCanvas.toDataURL('image/png');
-        img.onload = () => {
-          images.push(img);
-          if (images.length === 2) mergePhotos();
-        };
+    async function removeBackgroundFromImage(imageBlob) {
+      const formData = new FormData();
+      formData.append('image_file', imageBlob);
+
+      // Replace with your API endpoint
+      const response = await fetch('https://api.remove.bg/v1.0/removebg', {
+        method: 'POST',
+        headers: { 'X-Api-Key': 'j2AzvXatZJJPEMKJbGSNWiow' },
+        body: formData
+      });
+
+      if (!response.ok) {
+        alert('Background removal failed');
+        return await blobToDataURL(imageBlob);
+      }
+      const resultBlob = await response.blob();
+      return await blobToDataURL(resultBlob);
+    }
+
+    function blobToDataURL(blob) {
+      return new Promise((resolve) => {
+        const reader = new FileReader();
+        reader.onloadend = () => resolve(reader.result);
+        reader.readAsDataURL(blob);
+      });
+    }
+
+    function updatePreviews() {
+      const previews = document.getElementById('photoPreviews');
+      previews.innerHTML = '';
+      images.forEach((imgObj, idx) => {
+        const container = document.createElement('div');
+        container.className = 'preview-container';
+
+        const img = document.createElement('img');
+        img.src = imgObj.src;
+        img.style.maxWidth = '120px';
+        img.style.maxHeight = '120px';
+        img.style.cursor = 'pointer';
+        img.title = 'Click to crop';
+        img.onclick = () => openCropper(idx);
+
+        const delBtn = document.createElement('button');
+        delBtn.className = 'delete-btn';
+        delBtn.textContent = '×';
+        delBtn.onclick = (e) => { e.stopPropagation(); deleteImage(idx); };
+
+        const cropBtn = document.createElement('button');
+        cropBtn.className = 'crop-btn';
+        cropBtn.textContent = 'Crop';
+        cropBtn.onclick = (e) => { e.stopPropagation(); openCropper(idx); };
+
+        container.appendChild(img);
+        container.appendChild(delBtn);
+        container.appendChild(cropBtn);
+        previews.appendChild(container);
+      });
+      // Hide combined result if not 2 images
+      if (images.length !== 2) {
+        canvas.style.display = 'none';
+        document.getElementById('downloadBtn').style.display = 'none';
       }
     }
 
+    function deleteImage(index) {
+      images.splice(index, 1);
+      updatePreviews();
+    }
+
+    function openCropper(index) {
+      croppingIndex = index;
+      const modal = document.getElementById('cropModal');
+      const cropperImage = document.getElementById('cropperImage');
+      cropperImage.src = images[index].src;
+      modal.style.display = 'flex';
+      setTimeout(() => {
+        cropper = new Cropper(cropperImage, { viewMode: 1, autoCropArea: 1 });
+      }, 100);
+    }
+
+    function closeCropper() {
+      document.getElementById('cropModal').style.display = 'none';
+      if (cropper) { cropper.destroy(); cropper = null; }
+      croppingIndex = null;
+    }
+
+    function applyCrop() {
+      if (!cropper || croppingIndex === null) return;
+      const canvasCropped = cropper.getCroppedCanvas();
+      images[croppingIndex].src = canvasCropped.toDataURL('image/png');
+      images[croppingIndex].width = canvasCropped.width;
+      images[croppingIndex].height = canvasCropped.height;
+      updatePreviews();
+      if (images.length === 2) mergePhotos();
+      closeCropper();
+    }
+
     function mergePhotos() {
+      if (images.length !== 2) return;
       const gap = 10;
       const width = images[0].width + gap + images[1].width;
       const height = Math.max(images[0].height, images[1].height);
@@ -181,11 +219,22 @@
       canvas.height = height;
 
       context.clearRect(0, 0, canvas.width, canvas.height);
-      context.drawImage(images[0], 0, 0);
-      context.drawImage(images[1], images[0].width + gap, 0);
 
-      canvas.style.display = 'block';
-      document.getElementById('downloadBtn').style.display = 'inline-block';
+      // Draw first image
+      const img1 = new window.Image();
+      img1.onload = function() {
+        context.drawImage(img1, 0, 0, images[0].width, images[0].height);
+
+        // Draw second image
+        const img2 = new window.Image();
+        img2.onload = function() {
+          context.drawImage(img2, images[0].width + gap, 0, images[1].width, images[1].height);
+          canvas.style.display = 'block';
+          document.getElementById('downloadBtn').style.display = 'inline-block';
+        };
+        img2.src = images[1].src;
+      };
+      img1.src = images[0].src;
     }
 
     function downloadCombined() {
@@ -195,12 +244,8 @@
       link.click();
     }
 
-    async function main() {
-      await startCamera();
-      net = await bodyPix.load(); // load bodypix once
-    }
-
-    main();
+    // Initialize camera on load
+    window.onload = startCamera;
   </script>
 </body>
 </html>
