--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Photo Combiner with BG Remover API, Crop & Preview</title>
+  <title>Photo Combiner with BG Remover, Crop, Icons & Alignment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- CropperJS CSS -->
   <link href="https://cdn.jsdelivr.net/npm/cropperjs@1.5.13/dist/cropper.min.css" rel="stylesheet"/>
@@ -15,10 +15,16 @@
     button { background-color: #0066ff; color: white; padding: 12px 18px; font-size: 16px; border: none; border-radius: 8px; cursor: pointer; transition: background 0.3s; }
     button:hover { background-color: #004ccc; }
     .toggle-btn.active { background-color: #28a745 !important; }
-    #photoPreviews { display: flex; gap: 20px; margin-bottom: 20px; }
+    #alignmentControls { margin-bottom: 20px; display: flex; gap: 10px; justify-content: center; }
+    #alignmentControls button { background-color: #0066ff; color: white; border: none; padding: 8px 12px; border-radius: 8px; cursor: pointer; font-size: 14px; transition: background-color 0.3s ease; }
+    #alignmentControls button.active { background-color: #28a745; }
+    #photoPreviews { display: flex; gap: 20px; margin-bottom: 20px; flex-direction: row; }
     .preview-container { position: relative; display: inline-block; }
-    .delete-btn { position: absolute; top: 4px; right: 4px; background: #ff4444; color: #fff; border: none; border-radius: 50%; width: 24px; height: 24px; font-size: 16px; cursor: pointer; }
-    .crop-btn { position: absolute; bottom: 4px; left: 4px; background: #28a745; color: #fff; border: none; border-radius: 5px; font-size: 12px; padding: 2px 8px; cursor: pointer; }
+    .icon-btn { position: absolute; background: rgba(0,0,0,0.6); border: none; border-radius: 50%; width: 28px; height: 28px; color: white; cursor: pointer; display: flex; align-items: center; justify-content: center; transition: background-color 0.3s ease; }
+    .icon-btn:hover { background: rgba(0,0,0,0.8); }
+    .delete-btn { top: 4px; right: 4px; }
+    .crop-btn { bottom: 4px; left: 4px; }
+    .icon-btn svg { width: 16px; height: 16px; fill: white; display: block; }
     #cropModal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100vw; height: 100vh; background: rgba(0,0,0,0.7); justify-content: center; align-items: center; }
     #cropModalContent { background: #fff; padding: 20px; border-radius: 12px; }
     #cropperImage { max-width: 80vw; max-height: 60vh; }
@@ -35,6 +41,12 @@
     <button onclick="switchCamera()">🔄 Switch Camera</button>
     <button onclick="toggleRemoveBg()" id="removeBgBtn">🧼 Remove Background: OFF</button>
     <button onclick="downloadCombined()" style="display:none;" id="downloadBtn">⬇️ Download Combined</button>
+  </div>
+
+  <!-- Alignment toggle -->
+  <div id="alignmentControls">
+    <button id="alignHorizontal" class="active" title="Align Horizontally">↔️</button>
+    <button id="alignVertical" title="Align Vertically">↕️</button>
   </div>
 
   <div id="photoPreviews"></div>
@@ -64,6 +76,7 @@
     let removeBg = false;
     let croppingIndex = null;
     let cropper = null;
+    let alignHorizontal = true;
 
     async function startCamera() {
       if (stream) stream.getTracks().forEach(track => track.stop());
@@ -90,23 +103,19 @@
     }
 
     async function capturePhoto() {
-      // Draw current frame to temp canvas
       const tempCanvas = document.createElement('canvas');
       tempCanvas.width = video.videoWidth;
       tempCanvas.height = video.videoHeight;
       const tempCtx = tempCanvas.getContext('2d');
       tempCtx.drawImage(video, 0, 0);
 
-      // Convert to blob
       tempCanvas.toBlob(async (blob) => {
         let imgSrc;
         if (removeBg) {
-          // Call BG remover API
           imgSrc = await removeBackgroundFromImage(blob);
         } else {
           imgSrc = await blobToDataURL(blob);
         }
-        // Add to images array and update previews
         images.push({ src: imgSrc, width: tempCanvas.width, height: tempCanvas.height });
         updatePreviews();
         if (images.length === 2) mergePhotos();
@@ -140,6 +149,30 @@
       });
     }
 
+    // Alignment controls
+    document.addEventListener('DOMContentLoaded', function() {
+      document.getElementById('alignHorizontal').addEventListener('click', () => {
+        alignHorizontal = true;
+        document.getElementById('alignHorizontal').classList.add('active');
+        document.getElementById('alignVertical').classList.remove('active');
+        updateAlignment();
+        if (images.length === 2) mergePhotos();
+      });
+      document.getElementById('alignVertical').addEventListener('click', () => {
+        alignHorizontal = false;
+        document.getElementById('alignVertical').classList.add('active');
+        document.getElementById('alignHorizontal').classList.remove('active');
+        updateAlignment();
+        if (images.length === 2) mergePhotos();
+      });
+      updateAlignment();
+    });
+
+    function updateAlignment() {
+      const previews = document.getElementById('photoPreviews');
+      previews.style.flexDirection = alignHorizontal ? 'row' : 'column';
+    }
+
     function updatePreviews() {
       const previews = document.getElementById('photoPreviews');
       previews.innerHTML = '';
@@ -155,14 +188,27 @@
         img.title = 'Click to crop';
         img.onclick = () => openCropper(idx);
 
+        // Delete button with icon
         const delBtn = document.createElement('button');
-        delBtn.className = 'delete-btn';
-        delBtn.textContent = '×';
+        delBtn.className = 'icon-btn delete-btn';
+        delBtn.title = 'Delete Image';
+        delBtn.innerHTML = `
+          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path d="M18 6L6 18M6 6l12 12" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        `;
         delBtn.onclick = (e) => { e.stopPropagation(); deleteImage(idx); };
 
+        // Crop button with icon
         const cropBtn = document.createElement('button');
-        cropBtn.className = 'crop-btn';
-        cropBtn.textContent = 'Crop';
+        cropBtn.className = 'icon-btn crop-btn';
+        cropBtn.title = 'Crop Image';
+        cropBtn.innerHTML = `
+          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <rect x="3" y="3" width="18" height="18" rx="2" ry="2" fill="none" stroke="white" stroke-width="2"/>
+            <path d="M9 3v18M15 3v18M3 9h18M3 15h18" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        `;
         cropBtn.onclick = (e) => { e.stopPropagation(); openCropper(idx); };
 
         container.appendChild(img);
@@ -170,7 +216,7 @@
         container.appendChild(cropBtn);
         previews.appendChild(container);
       });
-      // Hide combined result if not 2 images
+      updateAlignment();
       if (images.length !== 2) {
         canvas.style.display = 'none';
         document.getElementById('downloadBtn').style.display = 'none';
@@ -213,22 +259,33 @@
     function mergePhotos() {
       if (images.length !== 2) return;
       const gap = 10;
-      const width = images[0].width + gap + images[1].width;
-      const height = Math.max(images[0].height, images[1].height);
+      let width, height;
+      if (alignHorizontal) {
+        width = images[0].width + gap + images[1].width;
+        height = Math.max(images[0].height, images[1].height);
+      } else {
+        width = Math.max(images[0].width, images[1].width);
+        height = images[0].height + gap + images[1].height;
+      }
       canvas.width = width;
       canvas.height = height;
 
       context.clearRect(0, 0, canvas.width, canvas.height);
 
-      // Draw first image
       const img1 = new window.Image();
       img1.onload = function() {
-        context.drawImage(img1, 0, 0, images[0].width, images[0].height);
-
-        // Draw second image
+        if (alignHorizontal) {
+          context.drawImage(img1, 0, 0, images[0].width, images[0].height);
+        } else {
+          context.drawImage(img1, 0, 0, images[0].width, images[0].height);
+        }
         const img2 = new window.Image();
         img2.onload = function() {
-          context.drawImage(img2, images[0].width + gap, 0, images[1].width, images[1].height);
+          if (alignHorizontal) {
+            context.drawImage(img2, images[0].width + gap, 0, images[1].width, images[1].height);
+          } else {
+            context.drawImage(img2, 0, images[0].height + gap, images[1].width, images[1].height);
+          }
           canvas.style.display = 'block';
           document.getElementById('downloadBtn').style.display = 'inline-block';
         };
@@ -244,7 +301,6 @@
       link.click();
     }
 
-    // Initialize camera on load
     window.onload = startCamera;
   </script>
 </body>
